--- a/S3T3n1/build.gradle
+++ b/S3T3n1/build.gradle
@@ -17,6 +17,11 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     implementation 'org.mongodb:mongodb-driver-sync:4.10.2'
+    // SLF4J
+    implementation 'org.slf4j:slf4j-api:1.7.32'
+
+    // SLF4J binding (Logback)
+    implementation 'ch.qos.logback:logback-classic:1.2.6'
 }
 
 test {
